[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-crawl"
version = "0.4.0"
description = "A powerful CLI tool for generating LLM-ready documentation from websites using crawl4ai"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ahmad Ragab", email = "hegemon@twelvehart.org" }]
keywords = [
  "web-crawling",
  "documentation",
  "llm",
  "ai",
  "scraping",
  "markdown",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = ["crawl4ai>=0.7.1", "tiktoken>=0.9.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "isort>=5.0.0", "mypy>=1.0.0"]

[project.scripts]
deep-crawl = "main:cli"

[project.urls]
Homepage = "https://github.com/ASRagab/deep-crawl"
Repository = "https://github.com/ASRagab/deep-crawl"
Issues = "https://github.com/ASRagab/deep-crawl/issues"
Documentation = "https://github.com/ASRagab/deep-crawl#readme"

# Configure hatch build to include our single-file module
[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[tool.hatch.build.targets.sdist]
only-include = ["main.py", "README.md", "pyproject.toml"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
